# slint-template

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  packager.linux.toml  packager.macos.toml  packager.windows.toml
.github/workflows/: build.yaml  linux.yaml  macos.yaml  macos_arm.yaml  macos_intel.yaml  windows.yaml
lang/: slint-template.pot
lang/en/LC_MESSAGES/: slint-template.po
src/: main.rs
ui/: app-window.slint  backend.slint  theme.slint
ui/components/: sidebar.slint
ui/components/ui/: horizontal-separator.slint  vertical-separator.slint
ui/pages/: about.slint  home.slint  playlist-download.slint  settings.slint  video-download.slint
ui/theme/: theme-structs.slint  variables.slint
ui/widgets/: button.slint  horizontal-separator.slint  vertical-separator.slint
