[package]
name = "slint-template"
version = "0.1.0"
edition = "2024"

[package.metadata.winresource]
OriginalFilename = "slint-template.exe"
InternalName = "slint-template.exe"
LegalCopyright = "Copyright uAtomicBoolean © 2026"

[dependencies]
slint = { version = "^1.15.0", features = ["renderer-skia"] }

[build-dependencies]
slint-build = "^1.15.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.19"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
